deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stable-deployment
  labels:
    app: stable
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stable
  template:
    metadata:
      labels:
        app: stable
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - canary
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: stable
        image: tu-imagen-estable:latest  # Reemplaza con tu imagen estable
        ports:
        - containerPort: 80
