canary.yml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  selector:
    app: canary
  ports:
    - protocol: TCP
      port: 80  # Puerto del servicio
      targetPort: 80  # Puerto del contenedor
  type: ClusterIP  # Tipo de servicio
