serviceDeployment.yml
apiVersion: v1
kind: Service
metadata:
  name: stable-service
spec:
  selector:
    app: stable
  ports:
    - protocol: TCP
      port: 80  # Puerto del servicio
      targetPort: 80  # Puerto del contenedor
  type: ClusterIP  # Tipo de servicio
